# timer-for-python

./: .gitattributes  .pre-commit-config.yaml  404.html  INSTALLATION.md  LICENSE.md  MANIFEST.in  README.md  build_package.py  deploy_package.py  deploy_test_package.py  index.html  mkdocs.yml  objects.inv  pipeline.sh  pyproject.toml  requirements.txt  requirements_dev.txt  robots.txt  setup.cfg  sitemap.xml  tags.json  tox.ini
.github/: FUNDING.yml
.github/workflows/: codecov.yml  codeql.yml  docs.yml  index_now_submit_sitemap.yml  release.yml  submit_sitemap_action.yml  test.yml  test_docs.yml
assets/stylesheets/: colors.css
build_pipeline/: README.md  build_package.py  constants.py  deploy_package.py  deploy_test_package.py  pipeline.sh  pipeline_helper.py  run_tests.py
build_pipeline/config/: __init__.py  directory.py
build_pipeline/helper/: __init__.py  build_directory.py  build_package.py  config.py  constants.py  deploy_package.py  deploy_test_package.py  run_tests.py  test.py  working_directory.py
build_pipeline/helper/deploy_package/: __init__.py  prod.py  test.py
build_pipeline/helper/directory/: __init__.py  build.py  working.py
build_pipeline/homebrew/: formula.rb  update_formula.py
docs/: index.md  requirements.txt  support-and-contribution.md
docs/assets/index-now/: api-key.txt
docs/getting-started/: index.md  installation.md
docs/index/: tags.md
docs/project/: donate.md  support-and-contribution.md
docs/reference/: benchmark-timer.md  function-timer.md  index.md  start.md  stop.md  timer.md
docs/user-guide/: context-manager.md  decimals.md  function-decorator.md  graceful-error-handling.md  humanised-output.md  index.md  multiple-threads.md
docs/user-guide/tips-and-trick/: measure-start-and-stop-time.md
donate/: index.html
getting-started/: index.html
getting-started/installation/: index.html
index/tags/: index.html
pipeline/: README.md  build_package.py  deploy_package.py  deploy_test_package.py  pipeline_helper.py
project/donate/: index.html
project/support-and-contribution/: index.html
reference/: index.html
reference/benchmark-timer/: index.html
reference/function-timer/: index.html
reference/start/: index.html
reference/stop/: index.html
reference/timer/: index.html
search/: search_index.json
source/: README.md  timer.py
src/timer/: __init__.py  __main__.py  text_colour.py  textcolour.py  time_fractions.py  timefractions.py  timer.py  version.py
src/timer/constant/: __init__.py  decimals.py  various.py
src/timer/constants/: __init__.py  decimals.py  list_key.py  various.py
src/timer/constants/decimals/: __init__.py
src/timer/constants/list_key/: __init__.py
src/timer/controller/: __init__.py
src/timer/decorator/: benchmark.py  function.py
src/timer/error/: __init__.py
src/timer/helper/: __init__.py  colour.py  decimals.py  output.py  time_fractions.py
src/timer/helper/colour/: __init__.py
src/timer/helper/thread/: __init__.py  list.py
src/timer/helper/time_fractions/: __init__.py
src/timer/model/: __init__.py  elapsed_time_fractions.py  thread_item.py  time_fractions.py  timer.py  timer_base.py
src/timer/model/abc/: mkdocstrings.py
src/timer/models/: __init__.py  thread_item.py
support-and-contribution/: index.html
tags/: index.html
test/: README.md
test/_constant/: interval.py  terminal.py  time_unit.py
test/_helper/: __init__.py  operating_system.py  python_version.py  random.py  range.py  terminal_output.py  thread_item.py  time_fractions.py  timer.py
test/_mock_data/: decimals.py  thread_list.py
test/exception_handling/soft_error/: invalid_thread_type_start_test.py  invalid_thread_type_stop_test.py  start_test.py  stop_test.py
test/helper/decimals/: mediate_test.py  validate_and_normalise_test.py
test/helper/decorator/: benchmark_test.py  function_test.py
test/helper/output/: message_test.py
test/helper/output/mock_data/: output_message.py
test/helper/thread/: is_none_test.py  normalise_to_string_and_uppercase_test.py
test/helper/thread/list/: add_test.py  mock_data.py  remove_test.py  try_get_thread_item_and_index_test.py
test/helper/thread/list/mock_data/: thread_list.py
test/helper/time_fractions/: calculate_test.py  count_minutes_to_seconds_test.py  count_x_to_float_test.py  mock_data_output_message.py  mock_data_time_fractions.py  output_message_test.py  seconds_rounded_test.py
test/helper/time_fractions/_mock_data/: time_fractions.py
test/helper/time_fractions/mock_data/: time_fractions.py
test/helper/time_fractions_and_output/: output_message_test.py  seconds_rounded_test.py
test/timer/: decimals_output_test.py  function_decorator_test.py  time_unit_output_test.py
test/timer/exception_handling/: does_not_raise_exceptions_test.py
test/timer/exception_handling/soft_error/: decimals_1_test.py  invalid_thread_type_start_test.py  invalid_thread_type_stop_test.py  start_test.py  stop_test.py
test/timer/successful_output/: decimals_2_test.py  function_decorator_test.py  thread_test.py  time_unit_test.py
test/timer/successful_output/decorator/: function_with_arguments_test.py  function_without_arguments_test.py
test/timer/successful_output/time_unit/: emulation_test.py  real_test.py
test/various/: singleton_test.py  with_statement_context_manager_test.py
user-guide/: index.html
user-guide/context-manager/: index.html
user-guide/decimals/: index.html
user-guide/function-decorator/: index.html
user-guide/graceful-error-handling/: index.html
user-guide/humanised-output/: index.html
user-guide/multiple-threads/: index.html
user-guide/tips-and-trick/measure-start-and-stop-time/: index.html
