[metadata]
name = timer-for-python
version = 0.8.0
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Timer for Python
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    timer
url = https://jakob-bagterp.github.io/timer-for-python/
download_url = https://pypi.org/project/timer-for-python/
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/timer-for-python/issues
    Documentation = https://jakob-bagterp.github.io/timer-for-python/
    API Reference = https://jakob-bagterp.github.io/timer-for-python/reference/
    Source Code = https://github.com/jakob-bagterp/timer-for-python
    Release Notes = https://github.com/jakob-bagterp/timer-for-python/releases
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
setup_requires =
    colorist==1.8.3
install_requires =
    colorist==1.8.3
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage==7.6.4
    flake8==7.1.1
    mypy==1.13.0
    numpy==2.1.2
    pytest==8.3.3
    pytest-cov==5.0.0
    tox==4.23.2

[options.packages.find]
where = src

[options.package_data]
colorist = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    # Line length set to 120 by Autopep8:
    E501
exclude =
    .git
    __pycache__
    dist
