[metadata]
name = timer-for-python
version = 0.9.6
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Lightweight package that makes it easy to measure how much time it takes to run Python programs and gauge performance of multiple, smaller bits of code
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    timer
url = https://jakob-bagterp.github.io/timer-for-python/
download_url = https://pypi.org/project/timer-for-python/
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/timer-for-python/issues
    Documentation = https://jakob-bagterp.github.io/timer-for-python/
    API Reference = https://jakob-bagterp.github.io/timer-for-python/reference/
    Source Code = https://github.com/jakob-bagterp/timer-for-python
    Release Notes = https://github.com/jakob-bagterp/timer-for-python/releases
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
setup_requires =
    colorist==1.8.9
install_requires =
    colorist==1.8.9
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage==7.13.2
    flake8==7.3.0
    mypy==1.19.1
    pytest==9.0.2
    pytest-cov==7.0.0
    pytest-xdist==3.8.0
    tox==4.34.1

[options.packages.find]
where = src

[options.package_data]
timer = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    # Line length set to 120 by Autopep8:
    E501
exclude =
    .git
    __pycache__
    dist
